# lib-funcube-dongle-pro-

./: CMakeLists.txt  README.md  libfcdpp1.pc.in
debian/: README  README.Debian  README.source  changelog  control  copyright  debhelper-build-stamp  libfcdpp.cron.d.ex  libfcdpp.default.ex  libfcdpp.doc-base.EX  libfcdpp1.cron.d.ex  libfcdpp1.default.ex  libfcdpp1.doc-base.EX  libfdcpp.cron.d.ex  libfdcpp.default.ex  libfdcpp.doc-base.EX  libfdcpp1.cron.d.ex  libfdcpp1.default.ex  libfdcpp1.doc-base.EX  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  shlibs.local.ex
include/: fcdpp.h
src/: fcdpp.c  fcdpp.d  main.c
